--- a/templates/html.html
+++ b/templates/html.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>{Title}</title>
     <style>
+        body{
+            padding: 0px;
+            margin: 0px;
+        }
        .outer{
         display: grid;
         grid-template-columns: 40px auto;
