Everything working fine

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -29,7 +29,7 @@
         align-self: center;
        }
        #container{
-                margin:0px 300px 0px 300px;
+                margin:0px 10% 0px 10%;
         }
         #home{
                 padding:10px;
